make story interface and display object props in html

--- a/storytime-frontend/src/app/stories/stories.component.html
+++ b/storytime-frontend/src/app/stories/stories.component.html
@@ -1,3 +1,13 @@
 <p>stories works!</p>
 
-{{story}}
+<section>
+  <h3>{{ story.title | uppercase }}</h3>
+
+  <aside>
+      <div><span>Story id: {{story.id}}</span></div>
+      <div><span>Story tags: {{story.tags}}</span></div>
+  </aside>
+  <main>
+    {{ story.textContent }}
+  </main>
+</section>
