--- a/storytime-frontend/src/app/stories/stories.component.html
+++ b/storytime-frontend/src/app/stories/stories.component.html
@@ -1,11 +1,22 @@
 <p>stories works!</p>
 
 <section>
-  <h3>{{ story.title | uppercase }}</h3>
+  <label>
+    title:
+    <input [(ngModel)]="story.title" placeholder="title" />
+  </label>
+</section>
+
+<section>
+  <h3>{{ story.title }}</h3>
 
   <aside>
-      <div><span>Story id: {{story.id}}</span></div>
-      <div><span>Story tags: {{story.tags}}</span></div>
+    <div>
+      <span>Story id: {{ story.id }}</span>
+    </div>
+    <div>
+      <span>Story tags: {{ story.tags }}</span>
+    </div>
   </aside>
   <main>
     {{ story.textContent }}
